[package]
name = "adv-code-2024"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
code-timing-macros = { version = "0.0.5", features = ["release"] }
const_format = "0.2.33"

# Additional recommended dependencies
itertools = "0.13.0"
regex = "1.11.1"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
wildcard_imports = "allow"
items_after_statements = "allow"